--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGOOSE_URI="mongodb+srv://yumtruk:3CRh3UJMg6RIosYf@cluster0.tzdsj.mongodb.net/DChat"
+MONGOOSE_URI="mongodb+srv://210010052:sunay%40mongoDB@cluster0.upuigmf.mongodb.net/ChatSphereDB"
 JWT_SECRET="secret@696969"
